--- a/notebooks/04 NGAW2 Analysis.ipynb
+++ b/notebooks/04 NGAW2 Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 10,
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV file not found. Loading data from Excel file: ../data/Updated_NGA_West2_Flatfile_RotD50_d050_public_version.xlsx\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jackbaker/anaconda3/envs/JupyterBook/lib/python3.13/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Unknown extension is not supported and will be removed\n",
-      "  warn(msg)\n"
+      "/var/folders/3f/m11yz8gs3xl7p428csg_wb380000gr/T/ipykernel_39807/4192188532.py:7: DtypeWarning: Columns (2,29,43,45,54,86,91,93,94,95,96,97,105,118,266,269,270) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  nga_w2_flatfile = pd.read_csv(csv_path)\n"
      ]
     }
    ],
@@ -102,7 +95,23 @@
     "    nga_w2_flatfile[object_columns] = nga_w2_flatfile[object_columns].astype('string')\n",
     "    \n",
     "    # Save to CSV for future use\n",
-    "    nga_w2_flatfile.to_csv(csv_path, index=False)   "
+    "    nga_w2_flatfile.to_csv(csv_path, index=False)   \n",
+    "\n",
+    "\n",
+    "x1 = nga_w2_flatfile.columns.get_loc(\"T0.010S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract response spectra\n",
+    "\n",
+    "x1 = nga_w2_flatfile.columns.get_loc(\"T0.010S\")\n",
+    "x2 = nga_w2_flatfile.columns.get_loc(\"T20.000S\") + 1\n",
+    "response_spectra_df = nga_w2_flatfile.iloc[:, x1:x2]"
    ]
   },
   {
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
