--- a/notebooks/02 Logarithms.ipynb
+++ b/notebooks/02 Logarithms.ipynb
@@ -11,8 +11,10 @@
   {
    "cell_type": "markdown",
    "id": "k2dp829l4z",
-   "source": "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jackwbaker/shra-jupyter/blob/main/notebooks/02%20Logarithms.ipynb)",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/bakerjw/shra-jupyter/blob/main/notebooks/02%20Logarithms.ipynb)"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,10 +38,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ac1478ea",
    "metadata": {},
    "outputs": [],
-   "source": "color_spec = [\n    np.array([56, 95, 150])/255,  # First color (blue)\n    np.array([207, 89, 33])/255   # Second color (orange)\n]"
+   "source": [
+    "color_spec = [\n",
+    "    np.array([56, 95, 150])/255,  # First color (blue)\n",
+    "    np.array([207, 89, 33])/255   # Second color (orange)\n",
+    "]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +59,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3fc89b72",
    "metadata": {},
    "outputs": [],
-   "source": "x = np.arange(-1, 1.1, 0.1)\ne_x = np.exp(x)\nten_x = 10**x\n\ndef format_figure():\n    plt.grid(True, linestyle='--', alpha=0.7)\n    plt.tight_layout()"
+   "source": [
+    "x = np.arange(-1, 1.1, 0.1)\n",
+    "e_x = np.exp(x)\n",
+    "ten_x = 10**x\n",
+    "\n",
+    "def format_figure():\n",
+    "    plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "    plt.tight_layout()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,10 +83,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2b21f66f",
    "metadata": {},
    "outputs": [],
-   "source": "plt.figure()\nplt.semilogy(x, e_x, color=color_spec[0], linewidth=2, label='$e^x$')\nplt.semilogy(x, ten_x, color=color_spec[1], linewidth=2, label='$10^x$')\nyl = plt.ylim()\nplt.plot([0, 0], yl, '-k')  # Vertical line at x=0\nplt.xlabel('x')\nplt.legend(loc='upper left')\nformat_figure()\nplt.title('Exponential Functions (Log Scale)')\nplt.show()"
+   "source": [
+    "plt.figure()\n",
+    "plt.semilogy(x, e_x, color=color_spec[0], linewidth=2, label='$e^x$')\n",
+    "plt.semilogy(x, ten_x, color=color_spec[1], linewidth=2, label='$10^x$')\n",
+    "yl = plt.ylim()\n",
+    "plt.plot([0, 0], yl, '-k')  # Vertical line at x=0\n",
+    "plt.xlabel('x')\n",
+    "plt.legend(loc='upper left')\n",
+    "format_figure()\n",
+    "plt.title('Exponential Functions (Log Scale)')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +110,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8cf7faf4",
    "metadata": {},
    "outputs": [],
-   "source": "plt.figure()\nplt.plot(x, e_x, color=color_spec[0], linewidth=2, label='$e^x$')\nplt.plot(x, ten_x, color=color_spec[1], linewidth=2, label='$10^x$')\nyl = plt.ylim()\nplt.plot([0, 0], yl, '-k')  # Vertical line at x=0\nplt.xlabel('x')\nplt.legend(loc='upper left')\nformat_figure()\nplt.title('Exponential Functions (Linear Scale)')\nplt.show()"
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(x, e_x, color=color_spec[0], linewidth=2, label='$e^x$')\n",
+    "plt.plot(x, ten_x, color=color_spec[1], linewidth=2, label='$10^x$')\n",
+    "yl = plt.ylim()\n",
+    "plt.plot([0, 0], yl, '-k')  # Vertical line at x=0\n",
+    "plt.xlabel('x')\n",
+    "plt.legend(loc='upper left')\n",
+    "format_figure()\n",
+    "plt.title('Exponential Functions (Linear Scale)')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +137,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "80535179",
    "metadata": {},
    "outputs": [],
-   "source": "x_log = np.arange(0.1, 10.1, 0.1)  # Starting from 0.1 to avoid log(0)\nln_x = np.log(x_log)\nlog10_x = np.log10(x_log)"
+   "source": [
+    "x_log = np.arange(0.1, 10.1, 0.1)  # Starting from 0.1 to avoid log(0)\n",
+    "ln_x = np.log(x_log)\n",
+    "log10_x = np.log10(x_log)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +157,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "52541bad",
    "metadata": {},
    "outputs": [],
-   "source": "plt.figure()\nplt.plot(x_log, ln_x, color=color_spec[0], linewidth=2, label='$\\\\ln(x)$')\nplt.plot(x_log, log10_x, color=color_spec[1], linewidth=2, label='$\\\\log_{10}(x)$')\nplt.plot(x_log, np.zeros_like(x_log), '-k')  # Horizontal line at y=0\nplt.xlabel('x')\nplt.legend(loc='upper left')\nformat_figure()\nplt.show()"
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(x_log, ln_x, color=color_spec[0], linewidth=2, label='$\\\\ln(x)$')\n",
+    "plt.plot(x_log, log10_x, color=color_spec[1], linewidth=2, label='$\\\\log_{10}(x)$')\n",
+    "plt.plot(x_log, np.zeros_like(x_log), '-k')  # Horizontal line at y=0\n",
+    "plt.xlabel('x')\n",
+    "plt.legend(loc='upper left')\n",
+    "format_figure()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +182,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "e7beee2b",
    "metadata": {},
    "outputs": [],
-   "source": "plt.figure()\nplt.semilogx(x_log, ln_x, color=color_spec[0], linewidth=2, label='$\\\\ln(x)$')\nplt.semilogx(x_log, log10_x, color=color_spec[1], linewidth=2, label='$\\\\log_{10}(x)$')\nplt.semilogx(x_log, np.zeros_like(x_log), '-k')  # Horizontal line at y=0\nplt.xlabel('x')\nplt.legend(loc='upper left')\nformat_figure()\nplt.show()"
+   "source": [
+    "plt.figure()\n",
+    "plt.semilogx(x_log, ln_x, color=color_spec[0], linewidth=2, label='$\\\\ln(x)$')\n",
+    "plt.semilogx(x_log, log10_x, color=color_spec[1], linewidth=2, label='$\\\\log_{10}(x)$')\n",
+    "plt.semilogx(x_log, np.zeros_like(x_log), '-k')  # Horizontal line at y=0\n",
+    "plt.xlabel('x')\n",
+    "plt.legend(loc='upper left')\n",
+    "format_figure()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
